# path

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PATH.md  README.md  agent-building-workshop-stack.yaml  case.md  docker-compose.yml  path-standalone-stack.yaml  requirements.txt
docker/: startup.sh  supervisord.conf
docs/: PATH-customer-guide.html  PATH-customer-guide.md  PATH-customer-narrative.html  PATH-customer-narrative.md  PATH-workshop-EDM.pptx  PATH-workshop-handout.md  PATH_Agent_Designer_소개.pptx  create-harness-slide.js  create_workshop_edm.py  effective-harnesses-summary.pptx  path-standalone-stack.yaml
files/: agent-dev-prompt-template.md
infra/: package-lock.json  package.json
path-strands-agent/: .bedrock_agentcore.yaml  COMPATIBILITY_CHECK.md  README.md  agent_config.py  agent_model.py  agentcore_entrypoint.py  api_server.py  auth.py  background_worker.py  build-agent.sh  chat_agent.py  code_generator.py  code_generator_agent.py  deployment_log_manager.py  deployment_manager.py  deployment_service.py  feasibility_agent.py  gateway_manager.py  identity_manager.py  integration_validator.py  job_manager.py  llm_parsing.py  mcp_deployment_manager.py  multi_stage_spec_agent.py  pattern_agent.py  prompts.py  rate_limiter.py  requirements.txt  safe_tools.py  schemas.py  sdd_multi_stage_agent.py  session_cleanup.py  session_manager.py  skill_tool.py  spec_agent.py.backup  spec_parser.py  strands_utils.py  test_chat_streaming.py  test_code_generator.py  (+6 more)
path-web/: .env.local  Dockerfile  (+10 more)
strands-skill-system/setup/: create-uv-env.sh  pyproject.toml
(+1193 files in other folders)
