[project]
name = "strands-skill-system"
version = "0.1.0"
description = "Skill system implementation for Strands Agent SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "strands-agents==1.18.0",
    "boto3==1.40.75",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.10.0",
    "koreanize-matplotlib>=0.1.1",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langchain-core==1.1.0",
    "strands-agents-tools>=0.2.16",
]
